--- a/css/styles.css
+++ b/css/styles.css
@@ -82,6 +82,7 @@ nav ul li a:hover {
     margin-bottom: 6px;
     justify-content: center;
 }
+
 .gallery li .box h3 {
     margin-bottom: 6px;
     text-align: center;
@@ -91,5 +92,34 @@ nav ul li a:hover {
     text-transform: uppercase;
     color: #17181a;
     letter-spacing: 2px;
-    height:10vh;
-  }
+    height: 10vh;
+}
+
+.gallery li .box p {
+    text-align: center;
+    font-size: 2rem;
+    font-weight: bold;
+    color: #135D76
+}
+
+.gallery li .box time {
+    display: flex;
+    justify-content: center;
+    font-size: 1rem;
+    font-weight: bold;
+    color: #1a5b5e;
+}
+
+.gallery li .box .button {
+    margin-top: 5px;
+    width: 100%;
+    padding: 7px;
+    border: none;
+    background: #0D7139;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 1.25rem;
+    font-weight: 600;
+    color: #fff;
+    font-family: "Work Sans", sans-serif;
+}
