--- a/css/login.css
+++ b/css/login.css
@@ -25,3 +25,9 @@ input[type="password"] {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
 }
+
+#errorMessages {
+    text-align: center;
+    color: #d1001f;
+    font-size: 0.8rem;
+}
